    * FIX: install.sh mem requirements lowered for 3D TVs where's less available mem
    * FIX: install.sh kill konfabulator before installation to get more free memory
    * ADD: new NetCast web browser based links (from SmartTV NetCast 2.0) in Internet Browser page - 132 links currently compared to 68 before (by nicola_12345)

0.5.0:
    * FIX: workaround for network shares invisible dirs (thanks xren)
    * FIX: ywe first time configuration
    * FIX: abc.net.au link fix
    * FIX: /home was not writable on US and KR 2010 BCM models
    * FIX: netcast_config_regenerator.sh should use all country groups now for 'enable_all' option
    * FIX: support for Yahoo Widgets Engine running from other usb ports and other partitions
    * FIX: new Internet Browser page by nicola_12345 + his JavaScript code in proxy fixes for frames switching and other button bindings
    * FIX: two mouse pointers issue when switching between NetCast services and USB mouse was used
    * ADD: experimental support for SmartTV models [DO NOT FLASH IT ON THOSE MODELS!!!]
    * ADD: build and installation scripts can now handle 2011 BCM model images
    * ADD: support for Korean 2010 BCM models
    * ADD: /scripts/readspeedtest.sh script from mmm4m5m for read transfer rate measurement (thanks lprot for measurement hint)
    * ADD: storing rootfs and lginit backups at installation into /home/backup/{rootfs,lginit}.bck files
    * ADD: web proxy script for JavaScript code injection to improve Internet Browser - settings for start at boot (disabled by default)
    * ADD: get_RELEASE_info.sh script for getting LG firmware version
    * ADD: NetCast links icons preloading at boot - much quicker links.html page load time
    * ADD: mtdinfo.sh script for getting info about mtd partitions by mmm4m5m
    * ADD: yavido service alternate player (prototype for now)
    * ADD: rc.fwinfo to get info about TV model and LG firmware logged at boot